<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.restoUser.RegisterRestoActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/curve_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="32dp">

                <EditText
                    android:id="@+id/et_opening_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_desc_restaurant"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/opening_hours"
                    android:inputType="time"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/et_closing_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_opening_hours"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/closing_hours"
                    android:inputType="time"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/et_name_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/name_your_restaurant"
                    android:inputType="text"
                    android:maxLength="30"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/et_desc_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_name_restaurant"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/description_your_restaurant"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:padding="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_Register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/et_closing_hours"
                    android:layout_marginTop="10dp">

                    <ImageButton
                        android:id="@+id/btn_register_resto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/circle_button_login"
                        android:clickable="true"
                        android:padding="8dp"
                        android:paddingStart="19dp"
                        android:paddingEnd="19dp"
                        android:src="@drawable/arrow"
                        android:textAllCaps="false"
                        android:textColor="@android:color/background_light"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/sign_up"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/register_restaurant"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>